Fix gallery not showing on Chrome and grid sizes on IE11

--- a/portfolio-site/css/main.css
+++ b/portfolio-site/css/main.css
@@ -3,7 +3,6 @@
 /*************************************/
 
 html {
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -16,7 +15,6 @@ html {
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
   box-sizing: inherit;
 }
 
@@ -367,5 +365,16 @@ p {
 
   .vertical {
     display: none;
+  }
+}
+
+@media screen and (-ms-high-contrast: active) and (max-width: 600px),
+  screen and (-ms-high-contrast: none) and (max-width: 600px) {
+  .grid__item {
+    width: 100%;
+    margin-bottom: 2em;
+  }
+  .gallery__item {
+    width: 50%;
   }
 }
